--- a/DAL/Model1.Context.tt
+++ b/DAL/Model1.Context.tt
@@ -53,7 +53,7 @@ using System.Linq;
 }
 #>
 
-<#=Accessibility.ForType(container)#> partial class <#=code.Escape(container)#> : DBContext
+<#=Accessibility.ForType(container)#> partial class <#=code.Escape(container)#> : DbContext
 {
     public <#=code.Escape(container)#>()
         : base("name=<#=container.Name#>")
@@ -68,19 +68,19 @@ if (!loader.IsLazyLoadingEnabled(container))
 
 foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
 {
-    // Note: the DBSet members are defined below such that the getter and
-    // setter always have the same accessibility as the DBSet definition
+    // Note: the DbSet members are defined below such that the getter and
+    // setter always have the same accessibility as the DbSet definition
     if (Accessibility.ForReadOnlyProperty(entitySet) != "public")
     {
 #>
-        <#=codeStringGenerator.DBSetInitializer(entitySet)#>
+        <#=codeStringGenerator.DbSetInitializer(entitySet)#>
 <#
     }
 }
 #>
     }
 
-    protected override void OnModelCreating(DBModelBuilder modelBuilder)
+    protected override void OnModelCreating(DbModelBuilder modelBuilder)
     {
         throw new UnintentionalCodeFirstException();
     }
@@ -89,7 +89,7 @@ foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
     foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
     {
 #>
-    <#=codeStringGenerator.DBSet(entitySet)#>
+    <#=codeStringGenerator.DbSet(entitySet)#>
 <#
     }
 
@@ -117,7 +117,7 @@ private void WriteFunctionImport(TypeMapper typeMapper, CodeStringGenerator code
     {
 #>
 
-    [DBFunction("<#=edmFunction.NamespaceName#>", "<#=edmFunction.Name#>")]
+    [DbFunction("<#=edmFunction.NamespaceName#>", "<#=edmFunction.Name#>")]
     <#=codeStringGenerator.ComposableFunctionMethod(edmFunction, modelNamespace)#>
     {
 <#+
@@ -156,7 +156,7 @@ public void WriteFunctionParameter(string name, string isNotNull, string notNull
 <#+
 }
 
-public const string TemplateId = "CSharp_DBContext_Context_EF6";
+public const string TemplateId = "CSharp_DbContext_Context_EF6";
 
 public class CodeStringGenerator
 {
@@ -304,17 +304,17 @@ public class CodeStringGenerator
             callParams);
     }
     
-    public string DBSet(EntitySet entitySet)
+    public string DbSet(EntitySet entitySet)
     {
         return string.Format(
             CultureInfo.InvariantCulture,
-            "{0} virtual DBSet<{1}> {2} {{ get; set; }}",
+            "{0} virtual DbSet<{1}> {2} {{ get; set; }}",
             Accessibility.ForReadOnlyProperty(entitySet),
             _typeMapper.GetTypeName(entitySet.ElementType),
             _code.Escape(entitySet));
     }
 
-    public string DBSetInitializer(EntitySet entitySet)
+    public string DbSetInitializer(EntitySet entitySet)
     {
         return string.Format(
             CultureInfo.InvariantCulture,
